--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 		<div id="cow">
 		</div>
 
+		<div>
+		</div>
+
+		<div class="cow">
+		</div>
+
+		<div class="cow">
+		</div>
+
 		<h1 class="horse cow pig hairy-rabbit">
 			Horse
 		</h1>
